Add basic structure for the human.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,6 @@ set(OPENCV_LIBRARIES opencv_highgui opencv_core opencv_imgproc opencv_video)
 include_directories("/usr/local/include")
 link_directories("/usr/local/lib")
 
-set(SOURCE_FILES main.cpp utils.cpp utils.h preprocessing.cpp preprocessing.h)
+set(SOURCE_FILES main.cpp utils.cpp utils.h preprocessing.cpp preprocessing.h Human.cpp Human.h)
 add_executable(tracking_people ${SOURCE_FILES})
 target_link_libraries(tracking_people ${OPENCV_LIBRARIES})
