--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.7)
+cmake_minimum_required(VERSION 3.5)
 project(tracking_people)
 
 set(CMAKE_CXX_STANDARD 11)
@@ -14,3 +14,22 @@ add_executable(ground_truth ground_truth_visualizer.cpp Human.cpp Human.h utils.
 
 target_link_libraries(tracking_people ${OPENCV_LIBRARIES})
 target_link_libraries(ground_truth ${OPENCV_LIBRARIES})
+
+find_package(Doxygen)
+if (DOXYGEN_FOUND)
+    # set input and output files
+    set(DOXYGEN_IN ${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile)
+    set(DOXYGEN_OUT ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile)
+
+    # request to configure the file
+    configure_file(${DOXYGEN_IN} ${DOXYGEN_OUT} @ONLY)
+
+    # note the option ALL which allows to build the docs together with the application
+    add_custom_target( doc ALL
+            COMMAND ${DOXYGEN_EXECUTABLE} ${DOXYGEN_OUT}
+            WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+            COMMENT "Generating API documentation with Doxygen"
+            VERBATIM )
+else (DOXYGEN_FOUND)
+    message("[Warning] Doxygen need to be installed to generate the doxygen documentation.")
+endif (DOXYGEN_FOUND)
