Renamed the FindPeople file to match the class name.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,7 @@ set(OPENCV_LIBRARIES opencv_highgui opencv_core opencv_imgproc opencv_video)
 include_directories("/usr/local/include")
 link_directories("/usr/local/lib")
 
-set(SOURCE_FILES main.cpp utils.cpp utils.h preprocessing.cpp preprocessing.h Human.cpp Human.h)
+set(SOURCE_FILES main.cpp utils.cpp utils.h FindPeople.cpp FindPeople.h Human.cpp Human.h)
 
 add_executable(tracking_people ${SOURCE_FILES})
 add_executable(ground_truth ground_truth_visualizer.cpp Human.cpp Human.h utils.cpp utils.h)
